[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-optimizer-mcp"
dynamic = ["version"]
description = "MCP server for AI-driven function optimization: iteratively improve code via test feedback."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Barack Ndenga", email = "barack@example.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "openai>=1.0.0",
    "mcp>=1.0.0",
]
requires-python = ">=3.10"
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "hatch[vcs]",
]

[project.scripts]
ai-optimizer-mcp = "ai_optimizer_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ai-optimizer-mcp"
Repository = "https://github.com/yourusername/ai-optimizer-mcp.git"
Documentation = "https://ai-optimizer-mcp.readthedocs.io/"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel.shared-data]
"ai_optimizer_mcp README.md" = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --cov=ai_optimizer_mcp --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
